# school-dashboard

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  STRUCTURE.md  deep-links-spec.md  docker-compose.yml  install-lxc.sh  morning-digest-spec.md  pyproject.toml  school-sync.sh  web-app.py.bak
.github/workflows/: docker.yml
config/: env.example
cron-prompts/: afternoon-update.md  email-triage.md  evening-email.md  morning-briefing.md
docker/: crontab  entrypoint.sh
docs/: CONTRIBUTING.md  RUNBOOK.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/superpowers/plans/: 2026-04-09-email-calendar-memory.md  2026-04-10-cron-fix-and-dashboard-redesign.md  2026-04-10-digest-deep-links.md  2026-04-10-family-tracker.md  2026-04-10-github-actions-docker-build.md  2026-04-10-readiness-checklist.md  2026-04-10-schoology-due-dates.md  2026-04-10-three-daily-digests.md  2026-04-10-weekly-digest.md  2026-04-12-mobile-app-backend.md  2026-04-12-mobile-app-spa.md  (+1 more)
school_dashboard/: __init__.py  cli.py  db.py  digest.py  email.py  gcal.py  html.py  llm.py  readiness.py  state.py  sync_meta.py
school_dashboard/templates/: dashboard.html
sync/: gc-scrape.sh  run-digest.sh  run-weekly.sh  school-sync.sh
tests/: test_api_items.py  test_digest.py  test_html.py  test_inline_agent.py  test_items.py  test_llm.py  test_readiness.py  test_sync.py  test_sync_meta.py  test_wrapper_scripts.py
web/: app.py
web/spa/: index.html  package-lock.json  package.json  vite.config.ts
web/templates/: index.html
(+36 files in other folders)
